--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -529,7 +529,7 @@
                     </div>
                   </div>
                   <div class="grid-content">
-                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="Podstrona-2/images/colorful-tabletop-world-globe-GoBlU.png" class="features-image">
+                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="Podstrona-2/images/ai-ntk3tufuma.png" class="features-image">
                       <div class="features-image-bg"></div>
                       <div class="play-lightbox-2">
                         <div class="lightbox-2-wrap">
@@ -554,6 +554,20 @@
                                 </div>
                               </div>
                               <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "_id": "example_img",
+      "origFileName": "image-placeholder.svg",
+      "fileName": "image-placeholder.svg",
+      "fileSize": 2063,
+      "height": 150,
+      "url": "https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg",
+      "width": 150,
+      "type": "image"
+    }
+  ],
+  "group": ""
+}</script>
                             </a>
                           </div>
                           <div class="lightbox-2-overlay"></div>
