--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Nov 03 2025 11:24:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6904891658e8b99248f2e761" data-wf-site="6904891558e8b99248f2e60b">
+<!DOCTYPE html>
+<html lang="pl" data-wf-page="6904891658e8b99248f2e761" data-wf-site="6904891558e8b99248f2e60b">
 <head>
   <meta charset="utf-8">
   <title>Podróże - Kontakt i współpraca</title>
@@ -28,20 +28,20 @@
             <nav role="navigation" class="nav_04-menu w-nav-menu">
               <div class="nav_04-menu-links">
                 <div class="nav-link-wrap-2">
-                  <a href="#" class="nav-link w-inline-block">
+                  <a href="/" class="nav-link w-inline-block">
                     <p class="text-simple">Strona główna</p>
                     <div class="nav-link-bg"></div>
                   </a>
                 </div>
                 <div class="nav-link-wrap-2">
-                  <a href="#" class="nav-link w-inline-block">
+                  <a href="/Podstrona-2/" class="nav-link w-inline-block">
                     <p class="text-simple">Inspiracje</p>
                     <div class="nav-link-bg"></div>
                   </a>
                 </div>
                 <div class="nav-link-wrap-2 flex-center">
                   <div>
-                    <a href="#" target="_blank" class="nav-link w-inline-block">
+                    <a href="/Podstrona-2/" target="_blank" class="nav-link w-inline-block">
                       <p class="text-simple">Podróże</p>
                       <div class="nav-badge">3</div>
                       <div class="nav-link-bg"></div>
@@ -51,20 +51,20 @@
               </div>
               <div class="nav_menu-right">
                 <div class="nav-link-wrap-2">
-                  <a href="#" class="nav-link w-inline-block">
+                  <a href="/Podstrona-3/" class="nav-link w-inline-block">
                     <p class="text-simple">Poradniki</p>
                     <div class="nav-link-bg"></div>
                   </a>
                 </div>
                 <div class="nav-link-wrap-2">
-                  <a href="#" class="nav-link w-inline-block">
+                  <a href="/Podstrona-1/" class="nav-link w-inline-block">
                     <p class="text-simple">Kim jesteśmy?</p>
                     <div class="nav-link-bg"></div>
                   </a>
                 </div>
                 <div class="nav_buttons-wrap">
                   <div>
-                    <a href="#" class="button w-inline-block">
+                    <a href="/Podstrona-4/" class="button w-inline-block">
                       <p class="text-simple">Skontaktuj się!</p>
                       <div class="button-icon">
                         <div class="button-icon w-embed"><svg height="17" viewbox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg" class="button-icon">
@@ -1269,25 +1269,25 @@
                           </div>
                           <div class="footer_list-wrap">
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Kontakt</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-1/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">O nas</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Polityka prywatności</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-3/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Wskazówki podróżnicze</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
@@ -1300,25 +1300,25 @@
                           </div>
                           <div class="footer_list-wrap">
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-2/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Blog</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-2/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Galeria</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-3/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Pytania</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-2/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Recenzje</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
@@ -1331,25 +1331,25 @@
                           </div>
                           <div class="footer_list-wrap">
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-2/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Linki zewnętrzne</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/Podstrona-3/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">FAQ</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Dzięki za odwiedziny</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
                             </div>
                             <div class="footer_link-wrap">
-                              <a href="#" target="_blank" class="text-style-link link_footer w-inline-block">
+                              <a href="/" target="_blank" class="text-style-link link_footer w-inline-block">
                                 <p class="text-size-regular-13">Nasze profile</p>
                                 <div class="link-block-underline-2 link_underline-footer"></div>
                               </a>
