--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -114,7 +114,7 @@
                   </div>
                 </div>
                 <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-2nd">
-                  <div class="header-11-image-wrap"><img sizes="(max-width: 1208px) 100vw, 1208px" srcset="Podstrona-4/images/retro-yellow-telephone-pfntr-p-1080.jpeg 1080w alt="" src="images/retro-yellow-telephone-pfntr.jpeg" loading="lazy" class="header-background"></div>
+                  <div class="header-11-image-wrap"><img sizes="(max-width: 1208px) 100vw, 1208px" srcset="Podstrona-4/images/retro-yellow-telephone-pfntr-p-1080.jpeg 1080w alt="" src="Podstrona-4/images/retro-yellow-telephone-pfntr-p-1080.jpeg" loading="lazy" class="header-background"></div>
                 </div>
               </div>
             </div>
@@ -321,15 +321,15 @@
                 <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5a5-48f2e761" class="features-34-images">
                   <div class="features-34-sticky">
                     <div class="features-34-images-grid">
-                      <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5a8-48f2e761" class="feature_34-image"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/travel-memories-and-adventure-planning-vYfUg-p-500.png 500w, images/travel-memories-and-adventure-planning-vYfUg-p-800.png 800w, images/travel-memories-and-adventure-planning-vYfUg-p-1080.png 1080w, images/travel-memories-and-adventure-planning-vYfUg.png 1500w" alt="" src="images/travel-memories-and-adventure-planning-vYfUg.png" loading="lazy" class="feature_item-image"></div>
+                      <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5a8-48f2e761" class="feature_34-image"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="Podstrona-4/images/travel-memories-and-adventure-planning-vYfUg-p-1080.png" alt="" src="Podstrona-4/images/travel-memories-and-adventure-planning-vYfUg-p-1080.png" loading="lazy" class="feature_item-image"></div>
                       <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5aa-48f2e761" class="features-34-2nd-image">
-                        <div class="feature_34-image"><img sizes="(max-width: 841px) 100vw, 841px" srcset="images/solitary-explorer-studying-map-outdoors-ptswg-p-500.png 500w, images/solitary-explorer-studying-map-outdoors-ptswg-p-800.png 800w, images/solitary-explorer-studying-map-outdoors-ptswg.png 841w" alt="" src="images/solitary-explorer-studying-map-outdoors-ptswg.png" loading="lazy" class="feature_item-image"></div>
+                        <div class="feature_34-image"><img sizes="(max-width: 841px) 100vw, 841px" srcset="Podstrona-4/images/solitary-explorer-studying-map-outdoors-ptswg-p-800.png" alt="" src="images/solitary-explorer-studying-map-outdoors-ptswg.png" loading="lazy" class="feature_item-image"></div>
                       </div>
                       <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5ad-48f2e761" class="features-34-3rd-image">
                         <div class="feature_34-image"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004af749225d3eedb4b4_image%202.avif" alt="" class="feature_item-image"></div>
                       </div>
                       <div id="w-node-_196f1699-7cb5-9d28-96a8-0ebb022de5b0-48f2e761" class="features-34-4th-image">
-                        <div class="feature_34-image"><img sizes="(max-width: 1125px) 100vw, 1125px" srcset="Podstrona-4/images/world-map-tote-bag-vfjrg-p-1080.png 1080w" alt="" src="images/world-map-tote-bag-vfjrg.png" loading="lazy" class="feature_item-image"></div>
+                        <div class="feature_34-image"><img sizes="(max-width: 1125px) 100vw, 1125px" srcset="Podstrona-4/images/world-map-tote-bag-vfjrg-p-1080.png" alt="" src="Podstrona-4/images/world-map-tote-bag-vfjrg-p-1080.png" loading="lazy" class="feature_item-image"></div>
                       </div>
                     </div>
                   </div>
@@ -346,7 +346,7 @@
           <div class="container-medium container-on-bg">
             <div class="padding-section-medium">
               <div class="linkpage-content">
-                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg 500w, images/intimate-portrait-of-a-couple-9kxvs-p-800.jpeg 800w, images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg 1080w, images/intimate-portrait-of-a-couple-9kxvs.jpeg 1240w" alt="" src="images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
+                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="Podstrona-4/images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg" alt="" src="images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg" loading="lazy" class="linkpage_profile-image"></div>
                 <h2 class="heading-style-h4 text-color-white">Ewa i Tomek</h2>
                 <div class="margin-xsmall margin-top">
                   <p class="text-size-regular-10 text-color-white">Skontaktuj się z nami w prosty sposób</p>
@@ -415,16 +415,16 @@
                         <div class="gallery-grid-wrap">
                           <div class="gallery_03-grid">
                             <div class="grid-content hero-anim-load-1st">
-                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="images/gothic-cathedral-and-scenic-water-reflection-eh8im-p-500.png 500w, images/gothic-cathedral-and-scenic-water-reflection-eh8im-p-800.png 800w, images/gothic-cathedral-and-scenic-water-reflection-eh8im.png 1000w" alt="" src="images/gothic-cathedral-and-scenic-water-reflection-eh8im.png" loading="lazy" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="Podstrona-4/images/gothic-cathedral-and-scenic-water-reflection-eh8im-p-500.png" alt="" src="Podstrona-4/images/gothic-cathedral-and-scenic-water-reflection-eh8im-p-500.png" loading="lazy" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-2nd">
-                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="images/futuristic-cityscape-4io5v-p-500.png 500w, images/futuristic-cityscape-4io5v-p-800.png 800w, images/futuristic-cityscape-4io5v-p-1080.png 1080w, images/futuristic-cityscape-4io5v.png 1500w" alt="" src="images/futuristic-cityscape-4io5v.png" loading="lazy" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="Podstrona-4/images/futuristic-cityscape-4io5v-p-500.png" alt="" src="Podstrona-4/images/futuristic-cityscape-4io5v-p-500.png" loading="lazy" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-3rd">
-                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="images/dystopian-cityscape-sunset-wnb4e-p-500.png 500w, images/dystopian-cityscape-sunset-wnb4e-p-800.png 800w, images/dystopian-cityscape-sunset-wnb4e-p-1080.png 1080w, images/dystopian-cityscape-sunset-wnb4e.png 1500w" alt="" src="images/dystopian-cityscape-sunset-wnb4e.png" loading="lazy" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="Podstrona-4/images/dystopian-cityscape-sunset-wnb4e-p-500.png" alt="" src="Podstrona-4/images/dystopian-cityscape-sunset-wnb4e-p-500.png" loading="lazy" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-4th">
-                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="images/bustling-urban-winter-scene-pYgB3-p-500.png 500w, images/bustling-urban-winter-scene-pYgB3-p-800.png 800w, images/bustling-urban-winter-scene-pYgB3-p-1080.png 1080w, images/bustling-urban-winter-scene-pYgB3.png 1500w" alt="" src="images/bustling-urban-winter-scene-pYgB3.png" loading="lazy" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img sizes="100vw" srcset="Podstrona-4/images/bustling-urban-winter-scene-pYgB3-p-500.png" alt="" src="Podstrona-4/images/bustling-urban-winter-scene-pYgB3-p-500.png" loading="lazy" class="gallery_image"></div>
                             </div>
                           </div>
                         </div>
@@ -433,16 +433,16 @@
                         <div class="gallery-grid-wrap">
                           <div class="gallery_03-grid">
                             <div class="grid-content hero-anim-load-1st">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="Podstrona-4/images/world-map-tote-bag-vfjrg-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-2nd">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0046a8811089f620b6d3_About%202.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="Podstrona-4/images/hiker-in-grassy-landscape-cw2c5-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-3rd">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004233800dda2ee742f6_About%203.jpg" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="Podstrona-4/images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-4th">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004204df989648f96f93_About%204.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="Podstrona-4/images/mediterranean-coastal-scene-qxuuh.png" alt="" class="gallery_image"></div>
                             </div>
                           </div>
                         </div>
@@ -479,7 +479,7 @@
                           </div>
                           <div class="margin-small margin-top">
                             <div class="subcribers-wrap-2">
-                              <div class="subscribers-images"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00502fc2ff81b69b2c0a_Person%20img%202.avif" alt="" class="subscriber-image"><img sizes="100vw" srcset="images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png 500w, images/dramatic-portrait-with-lighting-effects-r-m7c-p-800.png 800w, images/dramatic-portrait-with-lighting-effects-r-m7c.png 838w" alt="" src="images/dramatic-portrait-with-lighting-effects-r-m7c.png" loading="lazy" class="subscriber-image subscriber2-image"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0050d38c5155660ef441_Person%20img%205.avif" alt="" class="subscriber-image subcriber3-image"></div>
+                              <div class="subscribers-images"><img loading="lazy" src="Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" class="subscriber-image"><img sizes="100vw" srcset="Podstrona-4/images/dramatic-portrait-with-lighting-effects-r-m7c-p-500.png" alt="" src="Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" loading="lazy" class="subscriber-image subscriber2-image"><img loading="lazy" src="Podstrona-4/images/professional-young-woman-portrait-i4pg2-p-500.png" alt="" class="subscriber-image subcriber3-image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-regular-10">Ponad 2000 subskrybentów</p>
                               </div>
@@ -495,7 +495,7 @@
             </div>
           </div>
         </div>
-        <div class="linkapage-bg"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="linkpage_bg-image">
+        <div class="linkapage-bg"><img loading="lazy" src="Podstrona-4/images/intimate-portrait-of-a-couple-9kxvs.jpeg" alt="" class="linkpage_bg-image">
           <div class="linkpage_bg-overlay"></div>
         </div>
       </div>
