--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -178,7 +178,7 @@
                       </div>
                       <div class="form_field-wrapper"><label for="Message-10" class="form_label">Załącznik</label><textarea id="Message-10" name="Message" maxlength="5000" data-name="Możesz dołączyć plik" placeholder="Możesz dołączyć plik" class="form-input is-text-area w-input"></textarea></div>
                       <div class="form_field-wrapper"><label class="w-checkbox form_checkbox">
-                          <div class="w-checkbox-input w-checkbox-input--inputType-custom form_checkbox-icon"></div><input type="checkbox" name="Checkbox-3" id="Checkbox-3" data-name="Checkbox 3" required="" style="opacity:0;position:absolute;z-index:-1"><span class="form_label margin-0 w-form-label" for="Checkbox-3">I accept these <a href="#" class="text-style-link-s">Velit Lorem adipisicing consectetur dolor qui proident fugiat culpa ex</a></span>
+                          <div class="w-checkbox-input w-checkbox-input--inputType-custom form_checkbox-icon"></div><input type="checkbox" name="Checkbox-3" id="Checkbox-3" data-name="Checkbox 3" required="" style="opacity:0;position:absolute;z-index:-1"><span class="form_label margin-0 w-form-label" for="Checkbox-3">Akceptuję <a href="#" class="text-style-link-s">regulamin</a></span>
                         </label></div>
                       <div data-w-id="196f1699-7cb5-9d28-96a8-0ebb022de55e" style="opacity:0" class="contact-button-wrap"><input type="submit" data-wait="Please wait..." class="button w-button" value="Submit"></div>
                     </form>
@@ -344,7 +344,7 @@
           <div class="container-medium container-on-bg">
             <div class="padding-section-medium">
               <div class="linkpage-content">
-                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg 500w, images/intimate-portrait-of-a-couple-9kxvs-p-800.jpeg 800w, images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg 1080w, images/intimate-portrait-of-a-couple-9kxvs.jpeg 1240w" alt="" src="images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
+                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="/Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg 500w, /Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs-p-800.jpeg 800w, /Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg 1080w, /Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs.jpeg 1240w" alt="" src="/Podstrona-2/images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
                 <h2 class="heading-style-h4 text-color-white">Ewa i Tomek</h2>
                 <div class="margin-xsmall margin-top">
                   <p class="text-size-regular-10 text-color-white">Skontaktuj się z nami w prosty sposób</p>
